samples/_failures_safe/1761490726_49caca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_42c3695c.c: In function ‘tokenize_operator’:
./samples/SAFE/__tmp_42c3695c.c:157:9: error: expected declaration or statement at end of input
  157 |         is_operator_char(tokenizer->input[tokenizer->position])) {
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_42c3695c.c:157:9: error: expected declaration or statement at end of input
